# kasu

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  pytest.ini
src/: cli.py
src/core/: config.py  file_scanner.py  merger.py
src/filters/: base.py  glob.py  ignore.py
src/generators/: __init__.py  base.py  markdown.py  text.py
src/kasu/: cli.py
src/sanitizers/: __init__.py  sanitizer.py
src/utils/: __init__.py  format_utils.py  language_map.py  list.py  statistics.py  tree.py
tests/: test_conftest.py
tests/e2e/: test_e2e_basic.py
tests/util/: test_cli.py  test_config.py  test_file_scanner.py  test_generators.py  test_glob_filter.py  test_ignore_filter.py  test_merger.py  test_sanitizer.py  test_utils.py
