[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kasu"
version = "0.0.6"
description = "KASU: Kind of ASsemble Utility for merging and sanitizing text files in a directory"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {name = "@remokasu", email = "0w0.ebi.kaitai@gmail.com"}
]
requires-python = ">=3.7"
dependencies = [
  "chardet>=5.0.0",
  "pyyaml>=6.0",
  "pathspec>=0.11.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
  "pytest-mock>=3.10.0"
]

[project.urls]
Homepage = "https://github.com/remokasu/kasu"
Repository = "https://github.com/remokasu/kasu"
Issues = "https://github.com/remokasu/kasu/issues"

[project.scripts]
ks = "kasu.cli:main"
kasu = "kasu.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
